# pi_coding_agent

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
pi_coding_agent/: __init__.py  agent_loop.py  cli.py  compaction.py  interactive.py  llm.py  session.py  session_manager.py  skill.py  system_prompt.py
pi_coding_agent/tools/: __init__.py  bash.py  edit.py  path_utils.py  read.py  truncate.py  write.py
tests/: test_bash_tool.py
